tests/snapshots/runtime_error_fixtures/indirect_call_wrong_arity.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/indirect_call_wrong_arity.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 17] Compiling  Assert
[ 2 of 17] Compiling  Debug
[ 3 of 17] Compiling  Array
[ 4 of 17] Compiling  List
[ 5 of 17] Compiling  Either
[ 6 of 17] Compiling  Eq
[ 7 of 17] Compiling  IO
[ 8 of 17] Compiling  Math
[ 9 of 17] Compiling  Num
[10 of 17] Compiling  Numeric
[11 of 17] Compiling  Option
[12 of 17] Compiling  Ord
[13 of 17] Compiling  Primops
[14 of 17] Compiling  Semigroup
[15 of 17] Compiling  Show
[16 of 17] Compiling  String
[17 of 17] Compiling  indirect_call_wrong_arity
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/indirect_call_wrong_arity.flx
error[E1000]: wrong number of arguments: want=2, got=1

  examples/runtime_errors/indirect_call_wrong_arity.flx:7:19
  |
7 |     let ignored = f(1)
  |                   ^^^^

Stack trace:
  at main (examples/runtime_errors/indirect_call_wrong_arity.flx:7:19)
  at <main>
