tests/snapshots/runtime_error_fixtures/list_boundary_string_into_list.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/list_boundary_string_into_list.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 19] Compiling  Add
[ 2 of 19] Compiling  Assert
[ 3 of 19] Compiling  Debug
[ 4 of 19] Compiling  Array
[ 5 of 19] Compiling  List
[ 6 of 19] Compiling  Either
[ 7 of 19] Compiling  Eq
[ 8 of 19] Compiling  IO
[ 9 of 19] Compiling  Math
[10 of 19] Compiling  Num
[11 of 19] Compiling  Numeric
[12 of 19] Compiling  Option
[13 of 19] Compiling  Ord
[14 of 19] Compiling  Primops
[15 of 19] Compiling  Semigroup
[16 of 19] Compiling  Show
[17 of 19] Compiling  String
[18 of 19] Compiling  BoundaryUnknown
• 1 error • examples/runtime_errors/list_boundary_string_into_list.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `sum_list`.

  examples/runtime_errors/list_boundary_string_into_list.flx:8:10
  |
3 | fn sum_list(xs: List<Int>) -> Int {
  | --------------------------------- `sum_list` expects `List<Int>` as the 1st parameter
4 |     fold(xs, 0, /(acc: Int, x: Int) -> acc + x)
5 | }
6 |
7 | let dynamic = RuntimeErrors.BoundaryUnknown.dynamic_string()
8 | sum_list(dynamic)
  |          ^^^^^^^
  |          ------- this argument has type `String`

Note:
  expected argument type: List<Int>
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `List<Int>` value as the 1st argument.
