tests/snapshots/runtime_error_fixtures/primop_array_len_type.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/primop_array_len_type.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 18] Compiling  Add
[ 2 of 18] Compiling  Assert
[ 3 of 18] Compiling  Debug
[ 4 of 18] Compiling  Array
[ 5 of 18] Compiling  List
[ 6 of 18] Compiling  Either
[ 7 of 18] Compiling  Eq
[ 8 of 18] Compiling  IO
[ 9 of 18] Compiling  Math
[10 of 18] Compiling  Num
[11 of 18] Compiling  Numeric
[12 of 18] Compiling  Option
[13 of 18] Compiling  Ord
[14 of 18] Compiling  Primops
[15 of 18] Compiling  Semigroup
[16 of 18] Compiling  Show
[17 of 18] Compiling  String
[18 of 18] Compiling  primop_array_len_type
• 1 warning • examples/runtime_errors/primop_array_len_type.flx
Warning[W034]: Legacy Builtin Helper

`array_len` is a legacy builtin helper spelling; prefer `Flow.Array.length`.

  examples/runtime_errors/primop_array_len_type.flx:2:19
  |
2 |     let ignored = array_len(1)
  |                   ^^^^^^^^^
  |                   --------- legacy helper spelling used here

Help:
  Import the owning Flow module and call the module-qualified API instead.

[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/primop_array_len_type.flx
error[E1004]: primop array_len expected Array, got Int

  examples/runtime_errors/primop_array_len_type.flx:2:19
  |
2 |     let ignored = array_len(1)
  |                   ^^^^^^^^^^^^

Stack trace:
  at main (examples/runtime_errors/primop_array_len_type.flx:2:19)
  at <main>
