tests/snapshots/runtime_error_fixtures/primop_string_len_type.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/primop_string_len_type.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 18] Compiling  Add
[ 2 of 18] Compiling  Assert
[ 3 of 18] Compiling  Debug
[ 4 of 18] Compiling  Array
[ 5 of 18] Compiling  List
[ 6 of 18] Compiling  Either
[ 7 of 18] Compiling  Eq
[ 8 of 18] Compiling  IO
[ 9 of 18] Compiling  Math
[10 of 18] Compiling  Num
[11 of 18] Compiling  Numeric
[12 of 18] Compiling  Option
[13 of 18] Compiling  Ord
[14 of 18] Compiling  Primops
[15 of 18] Compiling  Semigroup
[16 of 18] Compiling  Show
[17 of 18] Compiling  String
• 1 error, 1 warning • examples/runtime_errors/primop_string_len_type.flx
Warning[W034]: Legacy Builtin Helper

`string_len` is a legacy builtin helper spelling; prefer `Flow.String.string_len`.

  examples/runtime_errors/primop_string_len_type.flx:2:19
  |
2 |     let ignored = string_len(1)
  |                   ^^^^^^^^^^
  |                   ---------- legacy helper spelling used here

Help:
  Import the owning Flow module and call the module-qualified API instead.


error[E300]: Type Mismatch

I found a type mismatch.

  examples/runtime_errors/primop_string_len_type.flx:2:30
  |
2 |     let ignored = string_len(1)
  |                              ^
  |                              - this expression has type `Int`

  |                              - argument type is known at compile time

Note:
  expected type: String
  found type: Int

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.
  argument 1 to `string_len` does not match the imported boundary type

Found 1 error and 1 warning.
