tests/snapshots/runtime_error_fixtures/runtime_trace_error.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/runtime_trace_error.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 17] Compiling  Assert
[ 2 of 17] Compiling  Debug
[ 3 of 17] Compiling  Array
[ 4 of 17] Compiling  List
[ 5 of 17] Compiling  Either
[ 6 of 17] Compiling  Eq
[ 7 of 17] Compiling  IO
[ 8 of 17] Compiling  Math
[ 9 of 17] Compiling  Num
[10 of 17] Compiling  Numeric
[11 of 17] Compiling  Option
[12 of 17] Compiling  Ord
[13 of 17] Compiling  Primops
[14 of 17] Compiling  Semigroup
[15 of 17] Compiling  Show
[16 of 17] Compiling  String
• 1 error • examples/runtime_errors/runtime_trace_error.flx
error[E300]: Type Mismatch

I found a type mismatch.

  examples/runtime_errors/runtime_trace_error.flx:3:3
  |
3 |   1 + None;
  |   ^^^^^^^^
  |   -------- this expression has type `Option<_>`

  |   -------- this type mismatch is reported here

Note:
  expected type: Int
  found type: Option<_>
  the conflicting types meet at this expression

Help:
  This value might be `None`. Use `match` to unwrap it before using it here.
